style.css
@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');



.logo
{
    font-family: 'Shrikhand', cursive;
    display: flex;
    justify-content: center;
    margin-top: 10px;
}

.localisation
{
    justify-content: center;
    align-items: center;
    font-family: 'roboto';
    display: flex;
    margin-top: 5px;
    background-color: #E0E0E0;
    box-shadow:  2px 0px 5px 0px #888;
    
    

}

.gps
{
    color: grey;
}

.ville
{
    margin-left: 5px;
}


.headcase
{
    padding-top: 15px;
    background-color: #EEECEF;
    padding-bottom: 50px;
}

.subtitles
{
    margin-left: 5%;
    font-family: 'roboto';
    display: flex;
    justify-content: center;
}

.subtitles--light
{
    margin-left: 5%;
    font-family: 'roboto';
    color: #292929;
    font-size: 1.2em;
}

.rechercher /* Bouton Rechercher*/
{
    
    font-family: 'Roboto';
    display: block;
    background: linear-gradient(to top,#9356DC, #FF79DA );
    font-size: .9em;
    color: #ffffff;
    border-radius: 35px;
    border: none;
    width: 200px;
    cursor: pointer;
    height: 50px;
    margin-left: 20%;
    box-shadow:  0 0px 5px 2px #888;
   
}

.fonction
{
    margin-top: 30px;
    font-family:'roboto';

}

.fonction_list
{
    display: flex;
    flex-direction: column;
    padding-left: 20px; 
    padding-right: 15px;
    list-style: none;
    
}

.choice_btn
{
    box-shadow:  0 0px 5px 2px #888;
    font-family: 'roboto';
    display: inline-flex;
    align-items: center;
    font-size: .9em;
    color: black;
    border-radius: 20px;
    border: none;
    width: 200px;
    cursor: pointer;
    height: 50px;
    justify-content: space-around;
    align-items: center;
    width: 90%;
    height: 58px;
    margin: 10px;
    

}
.numb
{
    position: relative;
    right: 40px;
    color: white;
    background-color: #9356DC;
    width: 30px;
    height: 30px;
    border-radius: 20px 20px;
    align-items: center;
    border: 1px solid #f2f2f2;
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap; 
}

.fonct_bt{
    
    padding-left: 15px;
    padding-right: 15px;
    margin-bottom: 15px;
}

.icon_btn
{
    
    color: grey;
}

.shop_btn
{
    color: #9356DC;
}

#section_restau
{
   margin-top: 50px;
   padding-top: 30px;
   padding-bottom: 640px;
   background-color: #EEECEF ;

}

#title-restau
{
    margin-left: 15px;
    font-family: 'roboto';
}

.vignette_restaurant
{
    
    width: 255px;
    height: 200px;
    background-color: #ffffff;
    border-radius: 10px;
    margin-top: 15px;
    margin-left: 10px;
    margin-right: 10px;
    box-shadow: 2px 4px 2px #dfdbdb;
    padding-left: 30px;
    padding-right: 30px;
    margin-bottom: 15px;
}
.vignette_restaurant img 
{
    
    width: 280px;
    max-height: 150px;
    padding-top: 3px;
    margin-left: 3px;
    margin-right: 3px;
    border-radius: 10px 10px;
    
    
}

.nom_restau
{
    color: black;
    margin-top: 2px;
    padding-left: 10px;
    font-size: 1em;
    font-weight: bold;
    height: 6px;
    font-family: 'roboto';
}

.ville_restau
{
    color: black;
    padding-left: 10px;
    font-family: 'roboto';
    font-size: 0.9em;
    height: 6px;
}


.icn_rst
{
    font-size: 1.5em;
    margin-bottom: 30px;
    margin-left: 200px;
    padding-bottom: 25px;
    color: grey;
}

a{
    text-decoration: none;
}

.footer_logo
{
    margin-left: 15px;
    font-family: 'Shrikhand';
    color: white;

}

footer{
    background-color: #292929;
    padding-bottom: 15px;
    padding-top: 8px;
}
.footer_list
{
    display: flex;
    flex-flow: column nowrap;
list-style: none;
font-family: 'roboto';
text-decoration: white;
color: white;

}

.logo_menu
{
    font-family: 'Shrikhand', cursive;
    display: flex;
    justify-content: center;
    margin-top: 3px;
    
}

.banniere
{
    
    width: 300px;
    max-height: 300px;
    
}

